--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "drawio": "^1.0.7",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "wired-elements": "^3.0.0-rc.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
@@ -34,6 +36,7 @@
     "eslint": "^9.14.0",
     "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-vue": "^9.30.0",
+    "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.3.3",
