Initial commit for Unsplash MCP server integration

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.1.0",
     "drawio": "^1.0.7",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
