Documentation and Templates.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.11",
     "drawio": "^1.0.7",
     "pinia": "^2.3.0",
+    "playwright": "^1.49.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "wired-elements": "^3.0.0-rc.6"
