--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-storybook": "^0.11.2",
@@ -54,8 +55,10 @@
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.1",
     "prettier": "^3.3.3",
     "storybook": "^8.5.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
